--- a/꾹꾹이/Base.lproj/Main.storyboard
+++ b/꾹꾹이/Base.lproj/Main.storyboard
@@ -791,6 +791,20 @@
                                 <rect key="frame" x="294" y="72" width="100" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOK-um-g3i">
+                                <rect key="frame" x="20" y="76" width="98" height="53"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="clickCloud:" destination="qVG-R5-V6B" eventType="touchUpInside" id="oRg-e5-0f0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xFQ-EY-DIM">
+                                <rect key="frame" x="294" y="72" width="100" height="52"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="clickCloud:" destination="qVG-R5-V6B" eventType="touchUpInside" id="DWd-DQ-fJh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.39631632130267408" green="0.56906371740837436" blue="0.99154509283819625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -828,6 +842,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="cloud1" destination="QOK-um-g3i" id="jDo-gi-uAF"/>
+                        <outlet property="cloud2" destination="xFQ-EY-DIM" id="Kni-ea-gou"/>
                         <outlet property="countLabel" destination="87X-tb-rC7" id="Gsx-cV-DsF"/>
                         <outletCollection property="btnCoin" destination="k6b-Vw-dma" collectionClass="NSMutableArray" id="PNb-yV-MjQ"/>
                         <outletCollection property="btnCoin" destination="Frx-cr-PvB" collectionClass="NSMutableArray" id="Ty7-kg-07O"/>
@@ -1060,7 +1076,13 @@
             <objects>
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="EWD-vO-uBG" customClass="LightViewController" customModule="GGuk" customModuleProvider="target" sceneMemberID="viewController">
                     <extendedEdge key="edgesForExtendedLayout" top="YES"/>
-                    <navigationItem key="navigationItem" id="88X-Rh-GKC"/>
+                    <navigationItem key="navigationItem" id="88X-Rh-GKC">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="Czn-TO-y5L">
+                            <connections>
+                                <action selector="replayBtn:" destination="UPv-zc-HdY" id="o9M-Cb-PYV"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UPv-zc-HdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1102,14 +1124,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqs-Gb-Qci">
-                                <rect key="frame" x="359" y="59" width="35" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="re"/>
-                                <connections>
-                                    <action selector="replayBtn:" destination="RLj-ez-bCD" eventType="touchUpInside" id="MXc-fz-JB1"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.95818311030000003" blue="0.75160515299999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -1173,14 +1187,6 @@
                                     <constraint firstAttribute="width" constant="311" id="she-O3-NpK"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ujj-Ge-Ue4">
-                                <rect key="frame" x="359" y="51" width="35" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="re"/>
-                                <connections>
-                                    <action selector="replayBtn:" destination="faY-WQ-SRs" eventType="touchUpInside" id="PTK-0M-zDo"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.92927109118301021" blue="0.85647762906266967" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -1218,7 +1224,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xhS-58-yap">
-                                <rect key="frame" x="0.0" y="211" width="414" height="525"/>
+                                <rect key="frame" x="0.0" y="211" width="414" height="268"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <outlet property="dataSource" destination="fgc-5u-abZ" id="DpN-kM-Hnx"/>
@@ -1226,11 +1232,11 @@
                                 </connections>
                             </pickerView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="slotmachin" translatesAutoresizingMaskIntoConstraints="NO" id="TWk-fi-t7j">
-                                <rect key="frame" x="-43" y="147" width="520" height="65"/>
+                                <rect key="frame" x="0.0" y="147" width="443" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T5O-nd-tmE">
-                                <rect key="frame" x="43" y="158" width="319" height="45"/>
+                                <rect key="frame" x="48" y="157" width="319" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="NeoDunggeunmo" family="NeoDunggeunmo" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -1459,10 +1465,9 @@
         <image name="mo" width="84" height="96"/>
         <image name="moonn" width="81" height="104"/>
         <image name="mousee" width="51" height="104"/>
-        <image name="pink" width="200" height="261"/>
+        <image name="pink" width="388" height="464"/>
         <image name="pp" width="87" height="98"/>
         <image name="pu" width="79" height="99"/>
-        <image name="re" width="45" height="45"/>
         <image name="slotmachin" width="300" height="41"/>
         <image name="snowwww" width="358" height="663"/>
         <image name="ss" width="99" height="105"/>
