--- a/꾹꾹이/Base.lproj/Main.storyboard
+++ b/꾹꾹이/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZB8-Qb-hnY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZB8-Qb-hnY">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1079,7 +1079,7 @@
                     <navigationItem key="navigationItem" id="88X-Rh-GKC">
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="Czn-TO-y5L">
                             <connections>
-                                <action selector="replayBtn:" destination="UPv-zc-HdY" id="o9M-Cb-PYV"/>
+                                <action selector="replayBtn:" destination="EWD-vO-uBG" id="H0s-YY-SfT"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
